# tribia-python-assessment

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
tests/: conftest.py  test_login.py
